# swagger.yaml
@@ -2,28 +2,60 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  GenericError:
+    description: GenericError is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: basic-microservice/hello/product-api/handlers_gorilla
   Product:
     description: Product defines the structure for an API product
     properties:
       description:
+        description: the description for this poduct
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: the id for the product
         format: int64
+        minimum: 1
         type: integer
         x-go-name: ID
       name:
+        description: the name for this poduct
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
+    required:
+    - name
+    - price
+    - sku
     type: object
-    x-go-package: github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/8_validation/data
+    x-go-package: basic-microservice/hello/product-api/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: basic-microservice/hello/product-api/handlers_gorilla
 info:
   description: Documentation for Product API
   title: of Product API
@@ -33,28 +65,62 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
 - application/json
 responses:
   errorResponse:
-    description: |-
-      NOTE: Types defined here are purely for documentation purposes
-      these types are not used by any of the handers
-
-      Generic error message returned as a string
+    description: Generic error message returned as a string
     schema:
-      items:
-        $ref: '#/definitions/Product'
-      type: array
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  noContentResponse:
+    description: No content is returned by this API endpoint
   productResponse:
     description: Data structure representing a single product
     schema:
       $ref: '#/definitions/Product'
+  productsResponse:
+    description: A list of products
+    schema:
+      items:
+        $ref: '#/definitions/Product'
+      type: array
 schemes:
 - http
 swagger: "2.0"
